RESOLVED FIXED220550
REGRESSION (r267571): black line appears upon navigating back from apple.com shopping bag
https://bugs.webkit.org/show_bug.cgi?id=220550
Summary REGRESSION (r267571): black line appears upon navigating back from apple.com ...
Antoine Quint
Reported 2021-01-12 10:44:08 PST
Steps to reproduce on iOS: 1. Open Safari 2. Navigate to apple.com 3. Tap on the shopping bag icon in the top right 4. Tap on the Bag item in the list 5. Wait for the next page to load 6. Navigate back to the previous page At this point you'll notice a black line appearing in the menu. Prior to r267571, there wouldn't be one.
Attachments
Patch (9.84 KB, patch)
2021-01-12 11:03 PST, Antoine Quint
no flags
Patch (12.41 KB, patch)
2021-01-12 12:13 PST, Antoine Quint
koivisto: review+
Antoine Quint
Comment 1 2021-01-12 10:44:23 PST
Antoine Quint
Comment 2 2021-01-12 11:03:28 PST
Antoine Quint
Comment 3 2021-01-12 12:13:55 PST
Antti Koivisto
Comment 4 2021-01-13 01:43:58 PST
Comment on attachment 417476 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=417476&action=review Looks good > Source/WebCore/dom/Element.cpp:3320 > + if (pseudoId == PseudoId::None) { I'd reverse the test so the main body of the function is the usual None case.
Antoine Quint
Comment 5 2021-01-13 02:11:35 PST
Note You need to log in before you can comment on or make changes to this bug.